--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    Go to <a href="dist/index.php">/dist/index.php</a>
+    Go to <a href="dist/tampilanAwal.php">/dist/index.php</a>
 </body>
 
 </html>
